--- a/WindowsPhoneCameraApi/WindowsPhoneCameraApi/WindowsPhoneCameraApi.csproj
+++ b/WindowsPhoneCameraApi/WindowsPhoneCameraApi/WindowsPhoneCameraApi.csproj
@@ -92,6 +92,12 @@
     <Compile Include="Common\ObservableDictionary.cs" />
     <Compile Include="Common\RelayCommand.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
+    <Compile Include="GpsPage.xaml.cs">
+      <DependentUpon>GpsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="GyroPage.xaml.cs">
+      <DependentUpon>GyroPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -119,6 +125,14 @@
     <Page Include="CameraPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="GpsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GyroPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
